Added load images
need to crop to scale

--- a/Trigonometry_IOS/Info.plist
+++ b/Trigonometry_IOS/Info.plist
@@ -22,5 +22,9 @@
 	<string>1.0</string>
 	<key>LSRequiresIPhoneOS</key>
 	<false/>
+	<key>UISupportedInterfaceOrientations</key>
+	<array>
+		<string>UIInterfaceOrientationPortrait</string>
+	</array>
 </dict>
 </plist>
